--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,14 @@ name = "pypi"
 flask = "==2.3.3"
 
 [dev-packages]
+coverage = "==7.2.7"
+pytest = "==7.4.0"
+pytest-console-scripts = "==1.4.1"
+pytest-cov = "==4.1.0"
+pytest-html = "==3.2.0"
+pytest-timeout = "==2.1.0"
+pytest-xdist = "==3.3.1"
+types-flask = "*"
 
 [requires]
 python_version = "3.8"
