--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ flask = "==2.3.3"
 
 [dev-packages]
 coverage = "==7.2.7"
+pre-commit = "==3.3.3"
 pytest = "==7.4.0"
 pytest-console-scripts = "==1.4.1"
 pytest-cov = "==4.1.0"
