--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: Main
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 env:
   project-name: flask_server
@@ -41,3 +41,31 @@ jobs:
       - name: Execute Pre-Commit
         run: |
           pipenv run pre-commit run --all
+
+  tests:
+
+    name: Tests
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - name: Checkout Repository
+        uses: actions/checkout@master
+
+      - name: Setup Python ${{ env.default-python-version }}
+        uses: actions/setup-python@v4.7.0
+        with:
+          python-version: ${{ env.default-python-version }}
+
+      - name: Install PipEnv
+        run: |
+          pip install pipenv==2022.1.8
+
+      - name: Sync With Repository
+        run: |
+          pipenv update -d
+          pipenv graph
+          # pipenv uninstall pytest-html
+
+      - name: Execute Tests
+        run: pipenv run pytest --cov-fail-under=90 --cov --cov-branch
