--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,8 @@
 ## Generic Analysis
 repos:
 
+## General Analysis
+
 -   repo: local
     hooks:
     -   id: section-generic
@@ -127,3 +129,44 @@ repos:
           - scan
           - README.md
           - project_information.md
+
+#### Dockerfile
+-   repo: https://github.com/hadolint/hadolint
+    rev: v2.12.0
+    hooks:
+    -   id: hadolint-docker
+        args: ["--ignore","DL3008"]
+-   repo: https://github.com/pryorda/dockerfilelint-precommit-hooks
+    rev: v0.1.0
+    hooks:
+    -   id: dockerfilelint
+
+#### GitHub Actions
+- repo: https://github.com/sirosen/check-jsonschema
+  rev: 0.10.0
+  hooks:
+    - id: check-github-actions
+    - id: check-github-workflows
+
+#### Terraform
+-   repo: local
+    hooks:
+    -   id: dockerfile-provides-entrypoint
+        name: TfLint
+        entry: ghcr.io/terraform-linters/tflint-bundle:latest
+        language: docker_image
+        pass_filenames: false
+        args:
+            - --recursive
+
+# -   repo: local
+#     hooks:
+#     -   id: terradoc
+#         name: Terradoc
+#         entry: quay.io/terraform-docs/terraform-docs:0.16.0
+#         language: docker_image
+#         pass_filenames: false
+#         args:
+#             - markdown
+#             # - --output-check
+#             - /src/terraform
