--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -173,6 +173,16 @@ jobs:
       SEMVER_VERSION: '${{ needs.pre-build-image.outputs.SEMVER_VERSION }}'
     steps:
 
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@v7
+        with:
+          root-reserve-mb: 30720  # https://github.com/easimon/maximize-build-space#caveats
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'false'
+          
       - name: Checkout Repository
         uses: actions/checkout@v3
 
@@ -186,6 +196,9 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: |
+            image=moby/buildkit:v0.12.0
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -199,9 +212,18 @@ jobs:
         with:
           context: .
           tags: ${{ env.DOCKER_IMAGE_NAME }}
-          push: true
+          push: false
           file: Dockerfile
           provenance: false
+
+      - name: Push Image to GitHub Container Registry
+        run: |
+          docker images
+
+          IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
+          echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+
+          docker push ${{ env.DOCKER_IMAGE_NAME }}
 
   integration-test-image:
 
