--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -169,8 +169,9 @@ jobs:
       run:
         shell: bash
     env:
-      IMAGE_VERSION: '${{ needs.pre-build-image.outputs.IMAGE_VERSION }}'
-      SEMVER_VERSION: '${{ needs.pre-build-image.outputs.SEMVER_VERSION }}'
+      ACR_SERVER_NAME: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
+      ACR_USERID: ${{ needs.terraform.outputs.ACR_USERID }}
+      ACR_PASSWORD: ${{ needs.terraform.outputs.ACR_PASSWORD }}
     steps:
 
       - name: Maximize build space
@@ -192,7 +193,7 @@ jobs:
           IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}.${{ github.run_number }}
           SEMVER_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}+${{ github.run_number }}
 
-          echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+          echo "DOCKER_IMAGE_NAME=${{ env.ACR_SERVER_NAME }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -200,75 +201,12 @@ jobs:
           driver-opts: |
             image=moby/buildkit:v0.12.0
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.GITHUB_CONTAINER_REGISTRY }}
-          username: ${{ secrets.DOCKER_CONTAINER_REGISTRY_USER }}
-          password: ${{ secrets.DOCKER_CONTAINER_REGISTRY_TOKEN }}
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          tags: ${{ env.DOCKER_IMAGE_NAME }}
-          push: true
-          file: Dockerfile
-          provenance: false
-
-      - name: Push Image to GitHub Container Registry
-        run: |
-          docker images
-
-          IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
-          echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
-
-          docker push ${{ env.DOCKER_IMAGE_NAME }}
-
-  integration-test-image:
-
-    needs: [build-image]
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-
-      - name: Explain
-        run: |
-          echo "This would be a great place for some integration tests with the recently built docker image."
-
-  deploy-to-acr:
-
-    needs: [integration-test-image, terraform]
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    env:
-      ACR_SERVER_NAME: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
-      ACR_USERID: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
-      ACR_PASSWORD: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
-    steps:
-
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set GitHub Image Name
-        run: |
-          IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
-          echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.GITHUB_CONTAINER_REGISTRY }}
-          username: ${{ secrets.DOCKER_CONTAINER_REGISTRY_USER }}
-          password: ${{ secrets.DOCKER_CONTAINER_REGISTRY_TOKEN }}
-
-      - name: Pull Docker Image From GitHub Container Registry
-        run: |
-          docker pull ${{ env.DOCKER_IMAGE_NAME }}
+      # - name: Login to GitHub Container Registry
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ${{ env.GITHUB_CONTAINER_REGISTRY }}
+      #     username: ${{ secrets.DOCKER_CONTAINER_REGISTRY_USER }}
+      #     password: ${{ secrets.DOCKER_CONTAINER_REGISTRY_TOKEN }}
 
       - name: Login To Azure Container Registry
         uses: azure/docker-login@v1
@@ -277,10 +215,79 @@ jobs:
           username: ${{ env.ACR_USERID }}
           password: ${{ env.ACR_PASSWORD }}
 
-      - name: Re-Tag and Push image to Azure Container Registry
-        run: |
-          IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
-          echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+      - name: Build Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          tags: ${{ env.DOCKER_IMAGE_NAME }}
+          push: true
+          file: ./Dockerfile
 
-          docker tag ${{ env.DOCKER_IMAGE_NAME }} ${{ env.ACR_SERVER_NAME }}/${{ env.BASE_IMAGE_NAME }}:${IMAGE_VERSION}
-          docker push ${{ env.ACR_SERVER_NAME }}/${{ env.BASE_IMAGE_NAME }}:${IMAGE_VERSION}
+      - name: Push Image to GitHub Container Registry
+        run: |
+          docker images
+
+          # IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
+          # echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+
+          # docker push ${{ env.DOCKER_IMAGE_NAME }}
+
+  # integration-test-image:
+
+  #   needs: [build-image]
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #   steps:
+
+  #     - name: Explain
+  #       run: |
+  #         echo "This would be a great place for some integration tests with the recently built docker image."
+
+  # deploy-to-acr:
+
+  #   needs: [integration-test-image, terraform]
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #   env:
+  #     ACR_SERVER_NAME: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
+  #     ACR_USERID: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
+  #     ACR_PASSWORD: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
+  #   steps:
+
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+
+  #     - name: Set GitHub Image Name
+  #       run: |
+  #         IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
+  #         echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+
+  #     - name: Login to GitHub Container Registry
+  #       uses: docker/login-action@v2
+  #       with:
+  #         registry: ${{ env.GITHUB_CONTAINER_REGISTRY }}
+  #         username: ${{ secrets.DOCKER_CONTAINER_REGISTRY_USER }}
+  #         password: ${{ secrets.DOCKER_CONTAINER_REGISTRY_TOKEN }}
+
+  #     - name: Pull Docker Image From GitHub Container Registry
+  #       run: |
+  #         docker pull ${{ env.DOCKER_IMAGE_NAME }}
+
+  #     - name: Login To Azure Container Registry
+  #       uses: azure/docker-login@v1
+  #       with:
+  #         login-server: '${{ env.ACR_SERVER_NAME }}'
+  #         username: ${{ env.ACR_USERID }}
+  #         password: ${{ env.ACR_PASSWORD }}
+
+  #     - name: Re-Tag and Push image to Azure Container Registry
+  #       run: |
+  #         IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
+  #         echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+
+  #         docker tag ${{ env.DOCKER_IMAGE_NAME }} ${{ env.ACR_SERVER_NAME }}/${{ env.BASE_IMAGE_NAME }}:${IMAGE_VERSION}
+  #         docker push ${{ env.ACR_SERVER_NAME }}/${{ env.BASE_IMAGE_NAME }}:${IMAGE_VERSION}
