--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ terraform/create-state/.terraform.lock.hcl
 terraform/create-state/terraform.tfstate
 terraform/create-state/terraform.tfstate.backup
 terraform/create-state/.terraform/*
+terraform/deploy/.terraform.lock.hcl
+terraform/deploy/.terraform/*
