https://github.com/jacobwinter314/art-of-the-possible/issues/18 - Add pipeline changes.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,6 +48,9 @@ repos:
     rev: v1.4.0
     hooks:
     -   id: detect-secrets
+        args:
+          - --exclude-files
+          - .*init_tfvars\.sh$
 
 ### Formatters
 
