--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -164,25 +164,17 @@ jobs:
   build-image:
 
     needs: [terraform]
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
     env:
       ACR_SERVER_NAME: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
       ACR_USERID: ${{ needs.terraform.outputs.ACR_USERID }}
       ACR_PASSWORD: ${{ needs.terraform.outputs.ACR_PASSWORD }}
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    outputs:
+      IMAGE_VERSION: ${{ steps.set-environment.outputs.IMAGE_VERSION }}
     steps:
-
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@v7
-        with:
-          root-reserve-mb: 30720  # https://github.com/easimon/maximize-build-space#caveats
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-          remove-docker-images: 'false'
 
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -193,20 +185,15 @@ jobs:
           IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}.${{ github.run_number }}
           SEMVER_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}+${{ github.run_number }}
 
-          echo "DOCKER_IMAGE_NAME=${{ env.ACR_SERVER_NAME }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+          echo "FULL_DOCKER_IMAGE_NAME=${{ env.ACR_SERVER_NAME }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+
+          echo "IMAGE_VERSION=${IMAGE_VERSION}" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
           driver-opts: |
             image=moby/buildkit:v0.12.0
-
-      # - name: Login to GitHub Container Registry
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: ${{ env.GITHUB_CONTAINER_REGISTRY }}
-      #     username: ${{ secrets.DOCKER_CONTAINER_REGISTRY_USER }}
-      #     password: ${{ secrets.DOCKER_CONTAINER_REGISTRY_TOKEN }}
 
       - name: Login To Azure Container Registry
         uses: azure/docker-login@v1
@@ -219,18 +206,9 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          tags: ${{ env.DOCKER_IMAGE_NAME }}
+          tags: ${{ env.FULL_DOCKER_IMAGE_NAME }}
           push: true
           file: ./Dockerfile
-
-      - name: Push Image to GitHub Container Registry
-        run: |
-          docker images
-
-          # IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
-          # echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
-
-          # docker push ${{ env.DOCKER_IMAGE_NAME }}
 
   # integration-test-image:
 
@@ -245,49 +223,79 @@ jobs:
   #       run: |
   #         echo "This would be a great place for some integration tests with the recently built docker image."
 
-  # deploy-to-acr:
+  cluster-deploy:
 
-  #   needs: [integration-test-image, terraform]
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       shell: bash
-  #   env:
-  #     ACR_SERVER_NAME: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
-  #     ACR_USERID: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
-  #     ACR_PASSWORD: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
-  #   steps:
+    name: 'Deploy to Cluster'
+    needs: [build-image, terraform]
+    env:
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+      ACR_SERVER_NAME: ${{ needs.terraform.outputs.ACR_SERVER_NAME }}
+      IMAGE_VERSION: ${{ needs.build-image.outputs.IMAGE_VERSION }}
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform/deploy
+    steps:
 
-  #     - name: Set GitHub Image Name
-  #       run: |
-  #         IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
-  #         echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Login to GitHub Container Registry
-  #       uses: docker/login-action@v2
-  #       with:
-  #         registry: ${{ env.GITHUB_CONTAINER_REGISTRY }}
-  #         username: ${{ secrets.DOCKER_CONTAINER_REGISTRY_USER }}
-  #         password: ${{ secrets.DOCKER_CONTAINER_REGISTRY_TOKEN }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION }}
+          terraform_wrapper: false
 
-  #     - name: Pull Docker Image From GitHub Container Registry
-  #       run: |
-  #         docker pull ${{ env.DOCKER_IMAGE_NAME }}
+      - name: Create TFVars
+        id: tfvars
+        run: |
+          echo "acr_host_name   = \"$ACR_SERVER_NAME\"" > terraform.tfvars
+          echo "acr_image_name  = \"$BASE_IMAGE_NAME\"" >> terraform.tfvars
+          echo "acr_image_tag   = \"$IMAGE_VERSION\"" >> terraform.tfvars
 
-  #     - name: Login To Azure Container Registry
-  #       uses: azure/docker-login@v1
-  #       with:
-  #         login-server: '${{ env.ACR_SERVER_NAME }}'
-  #         username: ${{ env.ACR_USERID }}
-  #         password: ${{ env.ACR_PASSWORD }}
+          echo "aks_cluster_name        = \"aks-artpossible-dev-westus\"" >> terraform.tfvars
+          echo "aks_resource_group_name = \"rg-artpossible-dev-westus\"" >> terraform.tfvars
 
-  #     - name: Re-Tag and Push image to Azure Container Registry
-  #       run: |
-  #         IMAGE_VERSION=${{ env.DOCKER_IMAGE_BASE_VERSION }}-${{ github.run_number }}
-  #         echo "DOCKER_IMAGE_NAME=${{ env.GITHUB_CONTAINER_REGISTRY }}/${BASE_IMAGE_NAME}:$IMAGE_VERSION" >> $GITHUB_ENV
+      - name: Terraform Format
+        id: format
+        run: terraform fmt -check
 
-  #         docker tag ${{ env.DOCKER_IMAGE_NAME }} ${{ env.ACR_SERVER_NAME }}/${{ env.BASE_IMAGE_NAME }}:${IMAGE_VERSION}
-  #         docker push ${{ env.ACR_SERVER_NAME }}/${{ env.BASE_IMAGE_NAME }}:${IMAGE_VERSION}
+      - name: Terraform Init
+        id: init
+        run: |
+          terraform init
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform Plan
+        id: plan
+        if: github.event_name == 'pull_request'
+        continue-on-error: true
+        run: |
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "TERRAFORM_PLAN<<$EOF" >> "$GITHUB_ENV"
+          terraform plan -no-color -input=false >> "$GITHUB_ENV"
+          echo "$EOF" >> "$GITHUB_ENV"
+
+      - name: Check Terraform Plan Status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
+
+      - name: Terraform Apply
+        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false
+
+      - name: Terraform Output
+        id: terraform-output
+        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          WEBAPP_CLUSTER_IP=$(terraform output -raw webapp_cluster_ip)
+
+          echo "WEBAPP_CLUSTER_IP=$WEBAPP_CLUSTER_IP"
