https://github.com/jacobwinter314/art-of-the-possible/issues/22 - first pass at documentation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -130,8 +130,8 @@ repos:
           - --config
           - clean.json
           - scan
-          - README.md
-          - project_information.md
+          - "*.md"
+          - "./docs/*.md"
 
 #### Dockerfile
 -   repo: https://github.com/hadolint/hadolint
